--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "indentSize": 2,
+  "tabSize": 2,
   "compilerOptions": {
     "lib": ["dom", "es5", "es2015"],
     "target": "es5",
@@ -6,6 +8,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
