add build:dev for vuejs

--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "npm run dev",
-    "build": "node build/build.js",
+    "build:prod": "node build/build.prod.js",
+    "build:dev": "node build/build.dev.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
