--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "lint": "tslint -p tsconfig.json && sass-lint -v"
   },
   "dependencies": {
+    "element-ui": "^1.4.6",
     "vue": "^2.4.2",
     "vue-class-component": "^5.0.2",
     "vue-router": "^2.7.0"
