--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,5 +13,8 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     "removeComments": true
-  }
+  },
+  "exclude": [
+		"scripts/templates"
+	]
 }
