--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "element-ui": "^1.4.6",
     "vue": "^2.4.2",
     "vue-class-component": "^5.0.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
