--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eventsource-polyfill": "^0.9.6",
@@ -74,6 +74,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.19.0",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
