--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
     "rimraf": "^2.6.0",
     "sass-lint": "^1.12.0",
     "sass-loader": "^6.0.6",
+    "script-loader": "^0.7.2",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
@@ -79,6 +80,7 @@
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "url-loader": "^0.5.8",
+    "videojs-record": "^2.0.0",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
@@ -86,7 +88,8 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "webrtc-adapter": "^5.0.5"
   },
   "engines": {
     "node": ">= 4.0.0",
