--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,6 +2,11 @@
   "indentSize": 2,
   "tabSize": 2,
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+        "~": ["node_modules"],
+        "@": ["src"]
+    },
     "lib": ["dom", "es5", "es2015"],
     "target": "es5",
     "module": "es2015",
